--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <li><a href="./plant.html">Orquidea</a></li>
 
     </header>
+    <a href="/rss/feed.rss"> mi canal rss </a>
 </body>
 </html>
